[package]
name = "actix-jobs"
version = "0.1.1"
edition = "2021"
description = "A simple job scheduler for Actix"
license = "MIT"
authors = ["Victor Garcia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
chrono = "0.4.30"
cron = "0.12.0"
tokio = "1.32.0"
